# cpp_server

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  MaNGOSr.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  gitignore  mangosr.vcxproj  mangosr.vcxproj.filters  world.conf.dist  world.conf.dist.in  wow_server.sln
Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
dep/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
dep/process/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
mangosr.dir/Debug/mangosr.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
src/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
src/common/: CMakeLists.txt  Define.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  common.vcxproj  common.vcxproj.filters
src/common/Cryptography/: OpenSSLCrypto.h
src/common/Debugging/: Errors.h
src/root/: CMakeLists.txt
src/root/include/: const_define.h
src/server/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  daemon.cpp  main.cpp  mangosd.vcxproj  mangosd.vcxproj.filters
src/server/database/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  database.vcxproj  database.vcxproj.filters
src/server/mangosd.dir/Debug/mangosd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/server/world/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  main.cpp  world_server.vcxproj  world_server.vcxproj.filters
src/utils/: CMakeLists.txt  cmake_install.cmake  common.cpp  config.cpp  utils.vcxproj  utils.vcxproj.filters
src/utils/include/: common.h  config.h
src/utils/utils.dir/Debug/utils.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Lib.read.1.tlog  custombuild.command.1.tlog  (+2 more)
