
file(GLOB FILE_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
	${CMAKE_CURRENT_SOURCE_DIR}/*.h

	${CMAKE_CURRENT_SOURCE_DIR}/Cryptography/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/Cryptography/*.cpp

	${CMAKE_CURRENT_SOURCE_DIR}/Debugging/*.cpp
)

list(APPEND SOURCES ${FILE_SOURCES})

add_library(common
	${SOURCES}
)
